samples/_failures_safe/1761128400_bec6cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_219c69a3.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_219c69a3.c:185:5: error: expected declaration or statement at end of input
  185 |     }
      |     ^
